// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`рендерит секцию логотипов банковской промо-страницы в мобильной версии 1`] = `
<div
  className="BankPromoSectionHeader BankPromoSectionHeader_mobile"
>
  <Memo(BankLogo)
    bankID="Test"
    centered={true}
    colorSet="red_black"
  />
</div>
`;

exports[`рендерит секцию логотипов банковской промо-страницы с полным контентом страницы 1`] = `
<div
  className="BankPromoSectionHeader BankPromoSectionHeader_desktop"
>
  <Memo(BankLogo)
    bankID="Test"
    centered={false}
    colorSet="red_black"
  />
  <div
    className="BankPromoSectionHeader__otherProduct"
  >
    <Link
      className="BankPromoSectionHeader__otherProductLink"
      disableSpa={true}
      url="link/broker-promo/?"
    >
      Сначала возьму кредит
       →
    </Link>
  </div>
</div>
`;

exports[`рендерит секцию логотипов банковской промо-страницы только с фреймом банка 1`] = `
<div
  className="BankPromoSectionHeader BankPromoSectionHeader_desktop"
>
  <Memo(BankLogo)
    bankID="Test"
    centered={true}
    colorSet="red_black"
  />
  <div
    className="BankPromoSectionHeader__otherProduct"
  >
    <Link
      className="BankPromoSectionHeader__otherProductLink"
      disableSpa={true}
      url="link/broker-promo/?"
    >
      Сначала возьму кредит
       →
    </Link>
  </div>
</div>
`;
